--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,15 +1,15 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/user/user",
     "pages/login/login",
-    "pages/index/index",
     "pages/order/order"
   ],
   "window": {
     "backgroundColor": "#fff",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "肖新星卤鹅",
+    "navigationBarTitleText": "测试",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
