--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,10 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/user/user",
     "pages/login/login",
+    "pages/user/user",
+    "pages/userinfo/userinfo",
+    "pages/pay/pay",
+    "pages/index/index",
     "pages/order/order"
   ],
   "window": {
@@ -15,19 +17,25 @@
   "tabBar": {
     "list": [
       {
-        "text": "菜单",
+        "text": "测试",
         "pagePath": "pages/index/index",
         "iconPath": "/images/tabs/home.png",
         "selectedIconPath": "images/tabs/home-active.png"
       },
       {
-        "text": "订单",
+        "text": "测试",
+        "pagePath": "pages/pay/pay",
+        "iconPath": "/images/tabs/pay.png",
+        "selectedIconPath": "images/tabs/pay-active.png"
+      },
+      {
+        "text": "测试",
         "pagePath": "pages/order/order",
         "iconPath": "/images/tabs/orders.png",
         "selectedIconPath": "images/tabs/orders-active.png"
       },
       {
-        "text": "我的",
+        "text": "测试",
         "pagePath": "pages/user/user",
         "iconPath": "/images/tabs/avatar.png",
         "selectedIconPath": "images/tabs/avatar-active.png"
