解决登录时精度丢失导致id不正确的问题

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,11 +1,11 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/login/login",
     "pages/user/user",
+    "pages/login/login",
     "pages/userinfo/userinfo",
     "pages/pay/pay",
-    "pages/order/order"
+    "pages/order/order",
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#fff",
