--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,9 +1,11 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/recharge/recharge",
-    "pages/user/user",
     "pages/pay/pay",
+    "pages/user/user",
+    "pages/address/address",
+    "pages/addAddress/addAddress",
+    "pages/recharge/recharge",
     "pages/login/login",
     "pages/order/order",
     "pages/record/record",
@@ -21,12 +23,6 @@
   },
   "tabBar": {
     "list": [
-      {
-        "text": "菜单",
-        "pagePath": "pages/index/index",
-        "iconPath": "/images/tabs/home.png",
-        "selectedIconPath": "images/tabs/home-active.png"
-      },
       {
         "text": "买单",
         "pagePath": "pages/pay/pay",
@@ -49,6 +45,7 @@
   },
   "sitemapLocation": "sitemap.json",
   "usingComponents": {
-    "van-popup": "@vant/weapp/popup/index"
+    "van-popup": "@vant/weapp/popup/index",
+    "van-icon": "@vant/weapp/icon/index"
   }
 }
