购物车支付完成部分，还未限制支付金额，会员支付余额没有扣除，支付完成后购物车没有清空

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,17 +1,17 @@
 {
   "pages": [
+    "pages/order/order",
     "pages/shopCar/shopCar",
     "pages/index/index",
-    "pages/pay/pay",
     "pages/user/user",
+    "pages/changePwd/changePwd",
     "pages/address/address",
+    "pages/pay/pay",
     "pages/addAddress/addAddress",
     "pages/recharge/recharge",
     "pages/login/login",
-    "pages/order/order",
     "pages/record/record",
     "pages/ticket/ticket",
-    "pages/changePwd/changePwd",
     "pages/purse/purse",
     "pages/userinfo/userinfo"
   ],
@@ -48,6 +48,7 @@
   "usingComponents": {
     "van-popup": "@vant/weapp/popup/index",
     "van-icon": "@vant/weapp/icon/index",
-    "van-action-sheet": "@vant/weapp/action-sheet/index"
+    "van-action-sheet": "@vant/weapp/action-sheet/index",
+    "van-overlay": "@vant/weapp/overlay/index"
   }
 }
