--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
+    "pages/home/home",
     "pages/order/order",
-    "pages/shopCar/shopCar",
     "pages/index/index",
-    "pages/user/user",
+    "pages/shopCar/shopCar",
     "pages/changePwd/changePwd",
+    "pages/user/user",
     "pages/address/address",
     "pages/pay/pay",
     "pages/addAddress/addAddress",
@@ -24,6 +25,12 @@
   },
   "tabBar": {
     "list": [
+      {
+        "text": "首页",
+        "pagePath": "pages/home/home",
+        "iconPath": "/images/tabs/home.png",
+        "selectedIconPath": "images/tabs/home-active.png"
+      },
       {
         "text": "买单",
         "pagePath": "pages/pay/pay",
