--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
     "pages": [
         "pages/home/home",
+        "pages/login/login",
         "pages/order/order",
         "pages/pay/pay",
         "pages/index/index",
